client/src/app/features/info-page/info-page.component.scss
@use '../../../assets/styles/variables';

.background-container {
  height: 100%;
  background-color: variables.$color-background-dark;
  overflow: hidden;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.info-container {
  position: relative;
  height: 70%;
  width: 80%;
  display: flex;
  flex-direction: column;
  padding: 2rem;
  overflow-y: auto;
  overflow-x: hidden;
  border-radius: 12px;
  z-index: 100;
  background-color: rgba(20, 20, 20, 0.2);
  border: 2px solid rgba(30, 30, 30, 0.4);
}

.info-container::-webkit-scrollbar {
  display: none;
}

#contact-us, #terms, #privacy {
  margin-bottom: 1rem;
  display: flex;
  flex-direction: column;
}

.title-container {
  display: flex;
  align-items: center;
}

.title-icon {
  fill: variables.$color-text-accent;
  width: 1.5rem;
  height: 1.5rem;
  margin-left: 0.6rem;
}

